# AutoCR-test

./: .coverage  README.md  pyproject.toml
autocr_test/entrypoints/: server.py
autocr_test/inventory/: inventory.yml  run.sh
autocr_test/models/: RepoFile.py  Review.py  __init__.py
autocr_test/routes/v1/: generator.py
autocr_test/utils/: cache_engine.py  config.py  constants.py  gh_engine.py  red_engine.py  reviews_engine.py  router_helper.py
tests/: __init__.py  conftest.py  test_generator.py
